--- a/result.html
+++ b/result.html
@@ -15,7 +15,7 @@
         </tr>
         <tr>
 	<td rowspan="4">
-        <img src="./img/geonho.jpg"width='150'>
+        <img src="./geonho.jpg"width='150'>
             <td><b>이름:</b> 박건호 </td> 
         </tr>
         <tr>
