--- a/result.html
+++ b/result.html
@@ -25,7 +25,7 @@
             <td><b>이메일:</b> geonho922@gmail.com</td>
         </tr>
         <tr>
-            <td><b>주소:</b> 서울특별시 강서구 강서로 45나길 15</td>
+            <td><b>주소:</b> 서울특별시 강서구 </td>
         </tr>
     </table>
 
