--- a/result.html
+++ b/result.html
@@ -39,7 +39,7 @@
             <td><b>명덕고등학교</b><br> (2021.03 ~ 2024.02)</td>
         </tr>
         <tr>
-            <td><b>폴리텍대학교 인천캠퍼스</b><br>AI융합소프트웨어과 (2025.03 ~ )</td>
+            <td><b>폴리텍대학교 인천캠퍼스</b><br>AI융합소프트웨어과 (2025.03 ~ 2027.02)</td>
         </tr>
     </table>
 
