--- a/notice.html
+++ b/notice.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>동네지도 - 공지사항</title>
+  <title>동네 노점상 - 공지사항</title>
   <link href="style.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
