--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
   <table>
         <tr>
       <td rowspan="2" class="photo-cell">
-        <img src="./img/geonho.jpg"width='150'>
+        <img src="./geonho.jpg"width='150'>
       </td>
       <td>박건호</td>
       <th>전화번호</th>
